add module01 ex00

--- a/cpp_module/ex01/Makefile
+++ b/cpp_module/ex01/Makefile
@@ -1,5 +1,5 @@
-CC = g++
-CFLAGS = -Wall -Wextra -Werror -g3 -std=c++98
+CC = c++
+CFLAGS = -Wall -Wextra -Werror -std=c++98
 RM = rm -rf
 
 SRC = ./ct_fun.cpp \
