--- a/cpp_module01/ex01/Makefile
+++ b/cpp_module01/ex01/Makefile
@@ -1,13 +1,13 @@
 CC = clang++
-CFLAGS = -Wall -Wextra -Werror -std=c++98
+CFLAGS = -Wall -Wextra -Werror -std=c++98 -g
 RM = rm -rf
 
-SRC = ./ct_fun.cpp \
-	  ./pb_fun.cpp \
-	  ./main.cpp
+SRC = ./main.cpp \
+./Zombie.cpp \
+./ZombieHorde.cpp \
 
 OBJS = $(SRC:.cpp=.o)
-NAME = phonebook
+NAME = ex01
 
 all : $(NAME)
 
