--- a/cpp_module01/ex03/Makefile
+++ b/cpp_module01/ex03/Makefile
@@ -1,13 +1,14 @@
 CC = clang++
-CFLAGS = -Wall -Wextra -Werror -std=c++98
+CFLAGS = -Wall -Wextra -Werror -std=c++98 -g
 RM = rm -rf
 
-SRC = ./ct_fun.cpp \
-	  ./pb_fun.cpp \
-	  ./main.cpp
+SRC = ./main.cpp \
+./Weapon.cpp \
+./HumanA.cpp \
+./HumanB.cpp \
 
 OBJS = $(SRC:.cpp=.o)
-NAME = phonebook
+NAME = ex03
 
 all : $(NAME)
 
