--- a/cpp_module02/ex03/Makefile
+++ b/cpp_module02/ex03/Makefile
@@ -4,9 +4,11 @@ RM = rm -rf
 
 SRC = ./main.cpp \
 ./Fixed.cpp \
+./Point.cpp \
+./bsp.cpp \
 
 OBJS = $(SRC:.cpp=.o)
-NAME = ex02
+NAME = BSP
 
 all : $(NAME)
 
