push cpp 05 ex01-middle

--- a/cpp_module/ex01/.vscode/settings.json
+++ b/cpp_module/ex01/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "sstream": "cpp",
-        "*.tcc": "cpp"
+        "*.tcc": "cpp",
+        "iostream": "cpp"
     }
 }
