--- a/cpp_module05/.vscode/settings.json
+++ b/cpp_module05/.vscode/settings.json
@@ -57,6 +57,7 @@
         "span": "cpp",
         "sstream": "cpp",
         "text_encoding": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "fstream": "cpp"
     }
 }
