--- a/cpp_module05/ex03/Makefile
+++ b/cpp_module05/ex03/Makefile
@@ -12,6 +12,7 @@ SRC = ./main.cpp \
 ./ShrubberyCreationForm.cpp \
 ./RobotomyRequestForm.cpp \
 ./PresidentialPardonForm.cpp \
+./Intern.cpp \
 
 OBJS = $(SRC:.cpp=.o)
 NAME = ex02
