not finish cpp08 ex02

--- a/cpp_module08/.vscode/settings.json
+++ b/cpp_module08/.vscode/settings.json
@@ -58,6 +58,12 @@
         "span": "cpp",
         "sstream": "cpp",
         "text_encoding": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "*.tpp": "cpp",
+        "stack": "cpp",
+        "forward_list": "cpp",
+        "unordered_set": "cpp",
+        "stacktrace": "cpp",
+        "regex": "cpp"
     }
 }
