--- a/cpp_modules09/.vscode/settings.json
+++ b/cpp_modules09/.vscode/settings.json
@@ -59,6 +59,9 @@
         "text_encoding": "cpp",
         "cinttypes": "cpp",
         "typeinfo": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "stack": "cpp",
+        "list": "cpp",
+        "ranges": "cpp"
     }
 }
